# blog

./: .gitignore  .pre-commit-config.yaml  _copy_paste_items.md  builder.py  feed.atom  index.html  justfile  pyproject.toml  requirements.txt  style.css  template.html
__archive/: code-python-abstract-classes.ipynb  code-snipper-altair-high-low-plots-how-to.ipynb  cs-algorithm-byte-pair-encoding.ipynb  sklearn-pipelines.md  statistics-timeseries-arima.ipynb
__archive/to_edit/: __elasticsearch-tutorial-05.md
__old_posts_to_convert/: 2022-06-09-kafka-101.md  code-sklearn-gridsearchcv.ipynb
_build/: elasticsearch-tutorial-01.html
css/: prism.css  pygmentize.css  style.css
html/: 2024_06_28.html  2024_07.html  2024_08.html  2024_09.html  __elasticsearch-tutorial-05.html  __refactoring-code-with-business-logic.html  __spark-tutorial-01.html  _elasticsearch-tutorial-05.html  elasticsearch-tutorial-01.html  elasticsearch-tutorial-02.html  elasticsearch-tutorial-03.html  elasticsearch-tutorial-04.html  feed.atom  sklearn-pipelines.html  spark-tutorial-01.html
js/: prism.js
md/: 2024_06_28.md  2024_07.md  2024_08.md  2024_09.md  __minimum-detectable-effect.md  _elasticsearch-tutorial-05.md  elasticsearch-tutorial-01.md  elasticsearch-tutorial-02.md  elasticsearch-tutorial-03.md  elasticsearch-tutorial-04.md  sklearn-pipelines.md  spark-tutorial-01.md
md/to_finish/: __refactoring-code-with-business-logic.md  elasticsearch-tutorial-04.md
posts/: elasticsearch-tutorial-01.md  example.md
src/: builder.py  template.html
